[tool.poetry]
name = "pymarkdown-nested-list-bug"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymarkdownlnt = "^0.9.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
